# PythonWeb12_Practice

Homework1/: README.md  UML_python_bot.drawio  addressbook.py  bot.py  cli_command_handlers.py  main.py
Homework10/: Dockerfile  authors.json  crawler.py  fill_db.py  main.py  pyproject.toml
Homework10/database/: db.py  models.py
Homework10/static/: bootstrap.min.css  main.css
Homework10/templates/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  login.html  quotes.html  register.html
Homework11/: pyproject.toml  seed.py
Homework11/src/: schemas.py
Homework11/src/conf/: config.py
Homework11/src/database/: db.py  models.py
Homework11/src/repository/: contacts.py
Homework11/src/routes/: contacts.py
Homework2/: Dockerfile  README.md  requirements.txt  setup.py
Homework2/python_bot/: __init__.py  bot.py  cli_command_handlers.py  cli_parser.py  interface.py  main.py
Homework3/: README.md
Homework3/processes/: main.py
Homework3/threads/: main.py
Homework4/: Dockerfile  README.md  main.py
Homework4/html/: error.html  index.html  message.html
Homework5/: README.md  chat_bot.py  exchange.py  main.css  requirements.txt
Homework6/: README.md  db_fill.py
Homework6/SQL_queries/: db_students.sql  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  (+1 more)
Homework7/: CRUD.py  db_students.py  my_select.py  my_select_results.txt  seed.py
Homework8/: README.md  requirements.txt
Homework9/: README.md  main.py  pyproject.toml
(+25 files in other folders)
