[tool.poetry]
name = "fastapi-addressbook"
version = "0.1.0"
description = ""
authors = ["NightSpring1 <deroy193@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_addressbook"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.17"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
faker = "^18.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
