[tool.poetry]
name = "scrapy-carawler"
version = "0.1.0"
description = ""
authors = ["NightSpring1 <deroy193@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapy_carawler"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
